@@ -21,7 +21,8 @@ typedef enum {
 	SBUF_EV_RECV_FAILED,
 	SBUF_EV_SEND_FAILED,
 	SBUF_EV_CONNECT_FAILED,
-	SBUF_EV_CONNECT_OK
+	SBUF_EV_CONNECT_OK,
+	SBUF_EV_FLUSH
 } SBufEvent;
 
 typedef struct SBuf SBuf;
