@@ -8,11 +8,13 @@
   * Fix rare case when socket woken up from send-wait could stay stalling.
   * More fair queueing of server connections.  Before, a new query could
     get a server connections before older one.
+  * Delay server release until everything is guaranteed to be sent.
 
   = Features =
 
   * SHOW SOCKETS command to have detailed info about state state.
   * Put PgSocket ptr to log, to help tracking one connection.
+  * Various code cleanups.
 
 2007-03-13  -  PgBouncer 1.0  -  "Tuunitud bemm"
 
